[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/scenes/Tileset/Ground/Ground.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/scenes/Espinho/Espinho.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/scenes/Tileset/Background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/scenes/Main_charecter/Main_Charecter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/decorations/decorations/flower/flower.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/decorations/decorations/grass/grass2.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/Sprites/decorations/decorations/tree/tree.png" type="Texture" id=7]
[ext_resource path="res://Assets/Music and Sounds/Music.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Level/Racial/Memories/memoria.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level/Racial/Memories/memoria_genero.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Level/Genero/Igualdade De Genero/scenes/Main_charecter/Main_Charecter_extension.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Level/Racial/Memories/memoria2.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Level/Racial/Memories/memoria3.gd" type="Script" id=13]

[node name="Node2D" type="Node2D"]

[node name="Mountain" parent="." instance=ExtResource( 3 )]

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 15, 16 )
format = 1
tile_data = PoolIntArray( -393189, 1, 0, -262114, 4, 0, -196578, 4, 0, -131042, 4, 0, -65515, 0, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 4, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65499, 1, 0, -65498, 1, 0, -65497, 2, 0, 14, 1, 0, 65550, 4, 0, 131086, 4, 0, 262163, 0, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 393242, 1, 0, 524319, 1, 0, 655394, 1, 0, 655395, 1, 0, 655396, 1, 0, 720937, 0, 0, 720938, 1, 0, 720939, 1, 0, 720940, 2, 0, 720944, 1, 0, 720947, 1, 0, 720964, 1, 0, 786447, 1, 0, 786489, 1, 0, 786490, 1, 0, 786491, 1, 0, 786492, 1, 0, 786493, 1, 0, 786494, 1, 0, 786495, 1, 0, 786500, 4, 0, 851983, 4, 0, 852031, 4, 0, 852036, 4, 0, 917519, 4, 0, 917567, 4, 0, 917572, 4, 0, 983055, 4, 0, 983103, 4, 0, 983108, 4, 0, 1048591, 4, 0, 1048639, 4, 0, 1048644, 4, 0, 1114127, 4, 0, 1114175, 4, 0, 1114180, 4, 0, 1179663, 4, 0, 1179716, 4, 0, 1245199, 4, 0, 1245252, 4, 0, 1310735, 4, 0, 1310783, 4, 0, 1310788, 4, 0, 1376271, 4, 0, 1376301, 1, 0, 1376306, 1, 0, 1376307, 1, 0, 1376308, 1, 0, 1376309, 1, 0, 1376310, 1, 0, 1376311, 1, 0, 1376315, 1, 0, 1376319, 4, 0, 1376324, 4, 0, 1441807, 4, 0, 1441837, 4, 0, 1441860, 4, 0, 1507343, 4, 0, 1507368, 1, 0, 1507373, 4, 0, 1507396, 4, 0, 1572879, 4, 0, 1572904, 4, 0, 1572909, 4, 0, 1572932, 4, 0, 1638412, 1, 0, 1638415, 4, 0, 1638440, 4, 0, 1638445, 4, 0, 1638468, 4, 0, 1703936, 0, 0, 1703937, 1, 0, 1703938, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 1703941, 1, 0, 1703942, 1, 0, 1703943, 1, 0, 1703944, 1, 0, 1703945, 1, 0, 1703946, 1, 0, 1703947, 1, 0, 1703948, 4, 0, 1703949, 1, 0, 1703950, 1, 0, 1703951, 4, 0, 1703952, 1, 0, 1703953, 1, 0, 1703954, 1, 0, 1703955, 1, 0, 1703956, 1, 0, 1703957, 1, 0, 1703958, 1, 0, 1703959, 1, 0, 1703960, 1, 0, 1703961, 1, 0, 1703962, 1, 0, 1703963, 1, 0, 1703964, 1, 0, 1703965, 1, 0, 1703966, 1, 0, 1703967, 1, 0, 1703968, 1, 0, 1703969, 1, 0, 1703970, 1, 0, 1703971, 1, 0, 1703972, 1, 0, 1703973, 1, 0, 1703974, 1, 0, 1703975, 1, 0, 1703976, 4, 0, 1703977, 1, 0, 1703978, 1, 0, 1703979, 1, 0, 1703980, 1, 0, 1703981, 4, 0, 1703982, 1, 0, 1703983, 1, 0, 1703984, 1, 0, 1703985, 1, 0, 1703986, 1, 0, 1703987, 1, 0, 1703988, 1, 0, 1703989, 1, 0, 1703990, 1, 0, 1703991, 1, 0, 1703992, 1, 0, 1703993, 1, 0, 1703994, 1, 0, 1703995, 1, 0, 1703996, 1, 0, 1703997, 1, 0, 1703998, 1, 0, 1703999, 1, 0, 1704000, 1, 0, 1704001, 1, 0, 1704002, 1, 0, 1704003, 2, 0, 1704004, 4, 0, 1769472, 3, 0, 1769473, 4, 0, 1769474, 4, 0, 1769475, 4, 0, 1769476, 4, 0, 1769477, 4, 0, 1769478, 4, 0, 1769479, 4, 0, 1769480, 4, 0, 1769481, 4, 0, 1769482, 4, 0, 1769483, 4, 0, 1769484, 4, 0, 1769485, 4, 0, 1769486, 4, 0, 1769487, 4, 0, 1769488, 4, 0, 1769489, 4, 0, 1769490, 4, 0, 1769491, 4, 0, 1769492, 4, 0, 1769493, 4, 0, 1769494, 4, 0, 1769495, 4, 0, 1769496, 4, 0, 1769497, 4, 0, 1769498, 4, 0, 1769499, 4, 0, 1769500, 4, 0, 1769501, 4, 0, 1769502, 4, 0, 1769503, 4, 0, 1769504, 4, 0, 1769505, 4, 0, 1769506, 4, 0, 1769507, 4, 0, 1769508, 4, 0, 1769509, 4, 0, 1769510, 4, 0, 1769511, 4, 0, 1769512, 4, 0, 1769513, 4, 0, 1769514, 4, 0, 1769515, 4, 0, 1769516, 4, 0, 1769517, 4, 0, 1769518, 4, 0, 1769519, 4, 0, 1769520, 4, 0, 1769521, 4, 0, 1769522, 4, 0, 1769523, 4, 0, 1769524, 4, 0, 1769525, 4, 0, 1769526, 4, 0, 1769527, 4, 0, 1769528, 4, 0, 1769529, 4, 0, 1769530, 4, 0, 1769531, 4, 0, 1769532, 4, 0, 1769533, 4, 0, 1769534, 4, 0, 1769535, 4, 0, 1769536, 4, 0, 1769537, 4, 0, 1769538, 4, 0, 1769539, 5, 0, 1835008, 3, 0, 1835009, 4, 0, 1835010, 4, 0, 1835011, 4, 0, 1835012, 4, 0, 1835013, 4, 0, 1835014, 4, 0, 1835015, 4, 0, 1835016, 4, 0, 1835017, 4, 0, 1835018, 4, 0, 1835019, 4, 0, 1835020, 4, 0, 1835021, 4, 0, 1835022, 4, 0, 1835023, 4, 0, 1835024, 4, 0, 1835025, 4, 0, 1835026, 4, 0, 1835027, 4, 0, 1835028, 4, 0, 1835029, 4, 0, 1835030, 4, 0, 1835031, 4, 0, 1835032, 4, 0, 1835033, 4, 0, 1835034, 4, 0, 1835035, 4, 0, 1835036, 4, 0, 1835037, 4, 0, 1835038, 4, 0, 1835039, 4, 0, 1835040, 4, 0, 1835041, 4, 0, 1835042, 4, 0, 1835043, 4, 0, 1835044, 4, 0, 1835045, 4, 0, 1835046, 4, 0, 1835047, 4, 0, 1835048, 4, 0, 1835049, 4, 0, 1835050, 4, 0, 1835051, 4, 0, 1835052, 4, 0, 1835053, 4, 0, 1835054, 4, 0, 1835055, 4, 0, 1835056, 4, 0, 1835057, 4, 0, 1835058, 4, 0, 1835059, 4, 0, 1835060, 4, 0, 1835061, 4, 0, 1835062, 4, 0, 1835063, 4, 0, 1835064, 4, 0, 1835065, 4, 0, 1835066, 4, 0, 1835067, 4, 0, 1835068, 4, 0, 1835069, 4, 0, 1835070, 4, 0, 1835071, 4, 0, 1835072, 4, 0, 1835073, 4, 0, 1835074, 4, 0, 1835075, 5, 0, 1900544, 3, 0, 1900545, 4, 0, 1900546, 4, 0, 1900547, 4, 0, 1900548, 4, 0, 1900549, 4, 0, 1900550, 4, 0, 1900551, 4, 0, 1900552, 4, 0, 1900553, 4, 0, 1900554, 4, 0, 1900555, 4, 0, 1900556, 4, 0, 1900557, 4, 0, 1900558, 4, 0, 1900559, 4, 0, 1900560, 4, 0, 1900561, 4, 0, 1900562, 4, 0, 1900563, 4, 0, 1900564, 4, 0, 1900565, 4, 0, 1900566, 4, 0, 1900567, 4, 0, 1900568, 4, 0, 1900569, 4, 0, 1900570, 4, 0, 1900571, 4, 0, 1900572, 4, 0, 1900573, 4, 0, 1900574, 4, 0, 1900575, 4, 0, 1900576, 4, 0, 1900577, 4, 0, 1900578, 4, 0, 1900579, 4, 0, 1900580, 4, 0, 1900581, 4, 0, 1900582, 4, 0, 1900583, 4, 0, 1900584, 4, 0, 1900585, 4, 0, 1900586, 4, 0, 1900587, 4, 0, 1900588, 4, 0, 1900589, 4, 0, 1900590, 4, 0, 1900591, 4, 0, 1900592, 4, 0, 1900593, 4, 0, 1900594, 4, 0, 1900595, 4, 0, 1900596, 4, 0, 1900597, 4, 0, 1900598, 4, 0, 1900599, 4, 0, 1900600, 4, 0, 1900601, 4, 0, 1900602, 4, 0, 1900603, 4, 0, 1900604, 4, 0, 1900605, 4, 0, 1900606, 4, 0, 1900607, 4, 0, 1900608, 4, 0, 1900609, 4, 0, 1900610, 4, 0, 1900611, 5, 0, 1966080, 3, 0, 1966081, 4, 0, 1966082, 4, 0, 1966083, 4, 0, 1966084, 4, 0, 1966085, 4, 0, 1966086, 4, 0, 1966087, 4, 0, 1966088, 4, 0, 1966089, 4, 0, 1966090, 4, 0, 1966091, 4, 0, 1966092, 4, 0, 1966093, 4, 0, 1966094, 4, 0, 1966095, 4, 0, 1966096, 4, 0, 1966097, 4, 0, 1966098, 4, 0, 1966099, 4, 0, 1966100, 4, 0, 1966101, 4, 0, 1966102, 4, 0, 1966103, 4, 0, 1966104, 4, 0, 1966105, 4, 0, 1966106, 4, 0, 1966107, 4, 0, 1966108, 4, 0, 1966109, 4, 0, 1966110, 4, 0, 1966111, 4, 0, 1966112, 4, 0, 1966113, 4, 0, 1966114, 4, 0, 1966115, 4, 0, 1966116, 4, 0, 1966117, 4, 0, 1966118, 4, 0, 1966119, 4, 0, 1966120, 4, 0, 1966121, 4, 0, 1966122, 4, 0, 1966123, 4, 0, 1966124, 4, 0, 1966125, 4, 0, 1966126, 4, 0, 1966127, 4, 0, 1966128, 4, 0, 1966129, 4, 0, 1966130, 4, 0, 1966131, 4, 0, 1966132, 4, 0, 1966133, 4, 0, 1966134, 4, 0, 1966135, 4, 0, 1966136, 4, 0, 1966137, 4, 0, 1966138, 4, 0, 1966139, 4, 0, 1966140, 4, 0, 1966141, 4, 0, 1966142, 4, 0, 1966143, 4, 0, 1966144, 4, 0, 1966145, 4, 0, 1966146, 4, 0, 1966147, 5, 0, 2031616, 3, 0, 2031617, 4, 0, 2031618, 4, 0, 2031619, 4, 0, 2031620, 4, 0, 2031621, 4, 0, 2031622, 4, 0, 2031623, 4, 0, 2031624, 4, 0, 2031625, 4, 0, 2031626, 4, 0, 2031627, 4, 0, 2031628, 4, 0, 2031629, 4, 0, 2031630, 4, 0, 2031631, 4, 0, 2031632, 4, 0, 2031633, 4, 0, 2031634, 4, 0, 2031635, 4, 0, 2031636, 4, 0, 2031637, 4, 0, 2031638, 4, 0, 2031639, 4, 0, 2031640, 4, 0, 2031641, 4, 0, 2031642, 4, 0, 2031643, 4, 0, 2031644, 4, 0, 2031645, 4, 0, 2031646, 4, 0, 2031647, 4, 0, 2031648, 4, 0, 2031649, 4, 0, 2031650, 4, 0, 2031651, 4, 0, 2031652, 4, 0, 2031653, 4, 0, 2031654, 4, 0, 2031655, 4, 0, 2031656, 4, 0, 2031657, 4, 0, 2031658, 4, 0, 2031659, 4, 0, 2031660, 4, 0, 2031661, 4, 0, 2031662, 4, 0, 2031663, 4, 0, 2031664, 4, 0, 2031665, 4, 0, 2031666, 4, 0, 2031667, 4, 0, 2031668, 4, 0, 2031669, 4, 0, 2031670, 4, 0, 2031671, 4, 0, 2031672, 4, 0, 2031673, 4, 0, 2031674, 4, 0, 2031675, 4, 0, 2031676, 4, 0, 2031677, 4, 0, 2031678, 4, 0, 2031679, 4, 0, 2031680, 4, 0, 2031681, 4, 0, 2031682, 4, 0, 2031683, 5, 0, 2097152, 3, 0, 2097153, 4, 0, 2097154, 4, 0, 2097155, 4, 0, 2097156, 4, 0, 2097157, 4, 0, 2097158, 4, 0, 2097159, 4, 0, 2097160, 4, 0, 2097161, 4, 0, 2097162, 4, 0, 2097163, 4, 0, 2097164, 4, 0, 2097165, 4, 0, 2097166, 4, 0, 2097167, 4, 0, 2097168, 4, 0, 2097169, 4, 0, 2097170, 4, 0, 2097171, 4, 0, 2097172, 4, 0, 2097173, 4, 0, 2097174, 4, 0, 2097175, 4, 0, 2097176, 4, 0, 2097177, 4, 0, 2097178, 4, 0, 2097179, 4, 0, 2097180, 4, 0, 2097181, 4, 0, 2097182, 4, 0, 2097183, 4, 0, 2097184, 4, 0, 2097185, 4, 0, 2097186, 4, 0, 2097187, 4, 0, 2097188, 4, 0, 2097189, 4, 0, 2097190, 4, 0, 2097191, 4, 0, 2097192, 4, 0, 2097193, 4, 0, 2097194, 4, 0, 2097195, 4, 0, 2097196, 4, 0, 2097197, 4, 0, 2097198, 4, 0, 2097199, 4, 0, 2097200, 4, 0, 2097201, 4, 0, 2097202, 4, 0, 2097203, 4, 0, 2097204, 4, 0, 2097205, 4, 0, 2097206, 4, 0, 2097207, 4, 0, 2097208, 4, 0, 2097209, 4, 0, 2097210, 4, 0, 2097211, 4, 0, 2097212, 4, 0, 2097213, 4, 0, 2097214, 4, 0, 2097215, 4, 0, 2097216, 4, 0, 2097217, 4, 0, 2097218, 4, 0, 2097219, 5, 0, 2162688, 3, 0, 2162689, 4, 0, 2162690, 4, 0, 2162691, 4, 0, 2162692, 4, 0, 2162693, 4, 0, 2162694, 4, 0, 2162695, 4, 0, 2162696, 4, 0, 2162697, 4, 0, 2162698, 4, 0, 2162699, 4, 0, 2162700, 4, 0, 2162701, 4, 0, 2162702, 4, 0, 2162703, 4, 0, 2162704, 4, 0, 2162705, 4, 0, 2162706, 4, 0, 2162707, 4, 0, 2162708, 4, 0, 2162709, 4, 0, 2162710, 4, 0, 2162711, 4, 0, 2162712, 4, 0, 2162713, 4, 0, 2162714, 4, 0, 2162715, 4, 0, 2162716, 4, 0, 2162717, 4, 0, 2162718, 4, 0, 2162719, 4, 0, 2162720, 4, 0, 2162721, 4, 0, 2162722, 4, 0, 2162723, 4, 0, 2162724, 4, 0, 2162725, 4, 0, 2162726, 4, 0, 2162727, 4, 0, 2162728, 4, 0, 2162729, 4, 0, 2162730, 4, 0, 2162731, 4, 0, 2162732, 4, 0, 2162733, 4, 0, 2162734, 4, 0, 2162735, 4, 0, 2162736, 4, 0, 2162737, 4, 0, 2162738, 4, 0, 2162739, 4, 0, 2162740, 4, 0, 2162741, 4, 0, 2162742, 4, 0, 2162743, 4, 0, 2162744, 4, 0, 2162745, 4, 0, 2162746, 4, 0, 2162747, 4, 0, 2162748, 4, 0, 2162749, 4, 0, 2162750, 4, 0, 2162751, 4, 0, 2162752, 4, 0, 2162753, 4, 0, 2162754, 4, 0, 2162755, 5, 0, 2228224, 3, 0, 2228225, 4, 0, 2228226, 4, 0, 2228227, 4, 0, 2228228, 4, 0, 2228229, 4, 0, 2228230, 4, 0, 2228231, 4, 0, 2228232, 4, 0, 2228233, 4, 0, 2228234, 4, 0, 2228235, 4, 0, 2228236, 4, 0, 2228237, 4, 0, 2228238, 4, 0, 2228239, 4, 0, 2228240, 4, 0, 2228241, 4, 0, 2228242, 4, 0, 2228243, 4, 0, 2228244, 4, 0, 2228245, 4, 0, 2228246, 4, 0, 2228247, 4, 0, 2228248, 4, 0, 2228249, 4, 0, 2228250, 4, 0, 2228251, 4, 0, 2228252, 4, 0, 2228253, 4, 0, 2228254, 4, 0, 2228255, 4, 0, 2228256, 4, 0, 2228257, 4, 0, 2228258, 4, 0, 2228259, 4, 0, 2228260, 4, 0, 2228261, 4, 0, 2228262, 4, 0, 2228263, 4, 0, 2228264, 4, 0, 2228265, 4, 0, 2228266, 4, 0, 2228267, 4, 0, 2228268, 4, 0, 2228269, 4, 0, 2228270, 4, 0, 2228271, 4, 0, 2228272, 4, 0, 2228273, 4, 0, 2228274, 4, 0, 2228275, 4, 0, 2228276, 4, 0, 2228277, 4, 0, 2228278, 4, 0, 2228279, 4, 0, 2228280, 4, 0, 2228281, 4, 0, 2228282, 4, 0, 2228283, 4, 0, 2228284, 4, 0, 2228285, 4, 0, 2228286, 4, 0, 2228287, 4, 0, 2228288, 4, 0, 2228289, 4, 0, 2228290, 4, 0, 2228291, 5, 0, 2293760, 3, 0, 2293761, 4, 0, 2293762, 4, 0, 2293763, 4, 0, 2293764, 4, 0, 2293765, 4, 0, 2293766, 4, 0, 2293767, 4, 0, 2293768, 4, 0, 2293769, 4, 0, 2293770, 4, 0, 2293771, 4, 0, 2293772, 4, 0, 2293773, 4, 0, 2293774, 4, 0, 2293775, 4, 0, 2293776, 4, 0, 2293777, 4, 0, 2293778, 4, 0, 2293779, 4, 0, 2293780, 4, 0, 2293781, 4, 0, 2293782, 4, 0, 2293783, 4, 0, 2293784, 4, 0, 2293785, 4, 0, 2293786, 4, 0, 2293787, 4, 0, 2293788, 4, 0, 2293789, 4, 0, 2293790, 4, 0, 2293791, 4, 0, 2293792, 4, 0, 2293793, 4, 0, 2293794, 4, 0, 2293795, 4, 0, 2293796, 4, 0, 2293797, 4, 0, 2293798, 4, 0, 2293799, 4, 0, 2293800, 4, 0, 2293801, 4, 0, 2293802, 4, 0, 2293803, 4, 0, 2293804, 4, 0, 2293805, 4, 0, 2293806, 4, 0, 2293807, 4, 0, 2293808, 4, 0, 2293809, 4, 0, 2293810, 4, 0, 2293811, 4, 0, 2293812, 4, 0, 2293813, 4, 0, 2293814, 4, 0, 2293815, 4, 0, 2293816, 4, 0, 2293817, 4, 0, 2293818, 4, 0, 2293819, 4, 0, 2293820, 4, 0, 2293821, 4, 0, 2293822, 4, 0, 2293823, 4, 0, 2293824, 4, 0, 2293825, 4, 0, 2293826, 4, 0, 2293827, 5, 0, 2359296, 3, 0, 2359297, 4, 0, 2359298, 4, 0, 2359299, 4, 0, 2359300, 4, 0, 2359301, 4, 0, 2359302, 4, 0, 2359303, 4, 0, 2359304, 4, 0, 2359305, 4, 0, 2359306, 4, 0, 2359307, 4, 0, 2359308, 4, 0, 2359309, 4, 0, 2359310, 4, 0, 2359311, 4, 0, 2359312, 4, 0, 2359313, 4, 0, 2359314, 4, 0, 2359315, 4, 0, 2359316, 4, 0, 2359317, 4, 0, 2359318, 4, 0, 2359319, 4, 0, 2359320, 4, 0, 2359321, 4, 0, 2359322, 4, 0, 2359323, 4, 0, 2359324, 4, 0, 2359325, 4, 0, 2359326, 4, 0, 2359327, 4, 0, 2359328, 4, 0, 2359329, 4, 0, 2359330, 4, 0, 2359331, 4, 0, 2359332, 4, 0, 2359333, 4, 0, 2359334, 4, 0, 2359335, 4, 0, 2359336, 4, 0, 2359337, 4, 0, 2359338, 4, 0, 2359339, 4, 0, 2359340, 4, 0, 2359341, 4, 0, 2359342, 4, 0, 2359343, 4, 0, 2359344, 4, 0, 2359345, 4, 0, 2359346, 4, 0, 2359347, 4, 0, 2359348, 4, 0, 2359349, 4, 0, 2359350, 4, 0, 2359351, 4, 0, 2359352, 4, 0, 2359353, 4, 0, 2359354, 4, 0, 2359355, 4, 0, 2359356, 4, 0, 2359357, 4, 0, 2359358, 4, 0, 2359359, 4, 0, 2359360, 4, 0, 2359361, 4, 0, 2359362, 4, 0, 2359363, 5, 0, 2424832, 4, 0, 2424833, 4, 0, 2424834, 4, 0, 2424835, 4, 0, 2424836, 4, 0, 2424837, 4, 0, 2424838, 4, 0, 2424839, 4, 0, 2424840, 4, 0, 2424841, 4, 0, 2424842, 4, 0, 2424843, 4, 0, 2424844, 4, 0, 2424845, 4, 0, 2424846, 4, 0, 2424847, 4, 0, 2424848, 4, 0, 2424849, 4, 0, 2424850, 4, 0, 2424851, 4, 0, 2424852, 4, 0, 2424853, 4, 0, 2424854, 4, 0, 2424855, 4, 0, 2424856, 4, 0, 2424857, 4, 0, 2424858, 4, 0, 2424859, 4, 0, 2424860, 4, 0, 2424861, 4, 0, 2424862, 4, 0, 2424863, 4, 0, 2424864, 4, 0, 2424865, 4, 0, 2424866, 4, 0, 2424867, 4, 0, 2424868, 4, 0, 2424869, 4, 0, 2424870, 4, 0, 2424871, 4, 0, 2424872, 4, 0, 2424873, 4, 0, 2424874, 4, 0, 2424875, 4, 0, 2424876, 4, 0, 2424877, 4, 0, 2424878, 4, 0, 2424879, 4, 0, 2424880, 4, 0, 2424881, 4, 0, 2424882, 4, 0, 2424883, 4, 0, 2424884, 4, 0, 2424885, 4, 0, 2424886, 4, 0, 2424887, 4, 0, 2424888, 4, 0, 2424889, 4, 0, 2424890, 4, 0, 2424891, 4, 0, 2424892, 4, 0, 2424893, 4, 0, 2424894, 4, 0, 2424895, 4, 0, 2424896, 4, 0, 2424897, 4, 0, 2424898, 4, 0, 2424899, 4, 0 )

[node name="Tree" type="Sprite" parent="Ground"]
position = Vector2( 289, 402 )
texture = ExtResource( 7 )

[node name="Tree2" type="Sprite" parent="Ground"]
position = Vector2( 260, 402 )
texture = ExtResource( 7 )

[node name="Flower" type="Sprite" parent="."]
position = Vector2( 356, 408 )
texture = ExtResource( 5 )

[node name="Flower2" type="Sprite" parent="."]
position = Vector2( 376, 408 )
texture = ExtResource( 5 )

[node name="Flower3" type="Sprite" parent="."]
position = Vector2( 393, 408 )
texture = ExtResource( 5 )

[node name="Grass2" type="Sprite" parent="."]
position = Vector2( 435, 399 )
texture = ExtResource( 6 )

[node name="Grass3" type="Sprite" parent="."]
position = Vector2( 463, 399 )
texture = ExtResource( 6 )

[node name="Grass4" type="Sprite" parent="."]
position = Vector2( 492, 399 )
texture = ExtResource( 6 )

[node name="Flower" type="Sprite" parent="Grass4"]
position = Vector2( 47, 8 )
texture = ExtResource( 5 )

[node name="Flower2" type="Sprite" parent="Grass4"]
position = Vector2( 66, 8 )
texture = ExtResource( 5 )

[node name="Flower3" type="Sprite" parent="Grass4"]
position = Vector2( 85, 8 )
texture = ExtResource( 5 )

[node name="espinhos" type="Node2D" parent="."]

[node name="Espinho4" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 811, 328 )

[node name="Espinho3" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 757, 328 )

[node name="Espinho5" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 899, 183 )

[node name="Espinho15" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 411, -24 )

[node name="Espinho6" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 727, 168 )

[node name="Espinho16" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 498, -24 )

[node name="Espinho14" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 370, -24 )

[node name="Espinho13" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 456, -72 )

[node name="Espinho9" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 726, 408 )

[node name="Espinho12" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 706, 408 )

[node name="Espinho10" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 867, 408 )

[node name="Espinho11" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 918, 408 )

[node name="Espinho" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 887, 408 )

[node name="Espinho7" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 644, 168 )

[node name="Espinho8" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 532, 151 )

[node name="Espinho2" parent="espinhos" instance=ExtResource( 2 )]
position = Vector2( 1026, 168 )

[node name="Main_Charecter" parent="." instance=ExtResource( 4 )]
position = Vector2( 200, 237 )
script = ExtResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="memoria" parent="." instance=ExtResource( 9 )]
position = Vector2( 952, 302 )
script = ExtResource( 10 )

[node name="memoria2" parent="." instance=ExtResource( 9 )]
position = Vector2( 395, 82 )
script = ExtResource( 12 )

[node name="memoria3" parent="." instance=ExtResource( 9 )]
position = Vector2( 582, -32 )
script = ExtResource( 13 )

[connection signal="body_entered" from="memoria" to="Main_Charecter" method="_on_memoria_body_entered"]
[connection signal="body_entered" from="memoria2" to="Main_Charecter" method="_on_memoria2_body_entered"]
[connection signal="body_entered" from="memoria3" to="Main_Charecter" method="_on_memoria3_body_entered"]
